--- a/DummyApplication/app/src/main/res/layout/activity_main.xml
+++ b/DummyApplication/app/src/main/res/layout/activity_main.xml
@@ -20,20 +20,23 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
-            android:hint="User Name"
         />
         <EditText
             android:id="@+id/passwordTextInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            android:hint="Password"
         />
-
-        <Button android:id="@+id/loginButton"
+        <TextView
+            android:id="@+id/signUpSwitch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Login" />
+            android:clickable="true"
+            android:focusable="true"
+            android:padding="3dp"/>
+        <Button android:id="@+id/loginButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
